# http-server

./: .gitignore  CMakeLists.txt  LICENSE  MyHTTPRequest.cpp  MyHTTPRequest.h  README.md  benchmark.cpp  main.cpp  myutils.h  smalltest.cpp
htmls/: index.html
